# comfyscope

./: README.md  __init__.py  pyproject.toml
ComfyUI-ModelScope-Manager/: config.ini
ComfyUI-ModelScope-Manager/.cache/: 1514988643_custom-node-list.json  2902516992_custom-node-list.json  3833217227_model-list.json  4245046894_model-list.json  746607195_github-stats.json
ComfyUI-ModelScope-Manager/glob/: manager_core.py  manager_server.py
ComfyUI-ModelScope-Manager/js/: comfyui-manager.js  comfyui-share-copus.js  custom-nodes-manager.js  model-manager.js
ComfyUI-ModelScope-Manager/snapshots/: 2024-08-01_09-26-08_autosave.json  2024-08-01_20-31-57_autosave.json  2024-08-09_11-16-28_autosave.json  2024-08-13_14-05-24_autosave.json  2024-08-13_21-30-45_autosave.json
nodes/: dashscope_flux_api.py
workflow_examples/: dashscope_flux.json
